kotlin-ide/idea/testData/multiModuleLineMarker/fromExpectedPrimaryConstructor/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in JVM'")!>NoConstructor2<!> {
    fun <!LINE_MARKER("descr='Has actuals in JVM'")!>extraFun<!>()
}